objects/PC_Document_Custom_Workflow_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>PC_Action__c</fullName>
        <description>Custom Label for the Button</description>
        <inlineHelpText>Custom Label for the Button</inlineHelpText>
        <label>Button Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Component__c</fullName>
        <description>Lightning component to be displayed when button is clicked</description>
        <inlineHelpText>Lightning component to be displayed when button is clicked. Include namespace if component has a namespace. &lt;namespaceprefix&gt;:&lt;componentApiName&gt;</inlineHelpText>
        <label>Component</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Engagement_Program__c</fullName>
        <description>Engagement Program Code for the engagement program the button should be visible</description>
        <inlineHelpText>Engagement Program Code for the engagement program the button should be visible</inlineHelpText>
        <label>Engagement Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Object_type__c</fullName>
        <label>Object type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Document Custom Workflow Setting</label>
    <pluralLabel>Documents Custom Workflow Setting</pluralLabel>
</CustomObject>